# git-gfs

./: .gitattributes  .gitconfig  Cargo.toml  README.md  flake.nix  notes.md  rust-toolchain.toml
.direnv/: flake-profile-1-link
src/: clean.rs  config.rs  content_sha.rs  flat_map_ok.rs  flatten_ok_then.rs  git_object_id.rs  git_object_sized.rs  install.rs  iter_reader_result.rs  lib.rs  main.rs  map_ok_then.rs  pointer.rs  post_commit.rs  pre_push.rs  smudge.rs  splitter.rs  track.rs
src/traits/: map_ok_then.rs  mod.rs  sealed_stdout.rs
tests/: clean.rs  common.rs  mod.rs
