[package]
name = "git-file-storage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-gfs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
bytesize = "1.3.0"
clap = { version = "4.5.21", features = ["derive"] }
clap-verbosity-flag = "3.0.0"
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
gix = "0.68.0"
prng_split = "0.1.0"
scopeguard = "1.2.0"
serde_json = "1.0.133"

[lints.clippy]
pedantic = "allow"
