[package]
name = "git-file-storage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-gfs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
bytesize = { version = "1.3.0", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
clap-verbosity-flag = "3.0.0"
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
gix = "0.73.0"
prng_split = "0.1.0"
scopeguard = "1.2.0"
serde_json = "1.0.133"
tempdir = "0.3.7"
fastcdc = "3.2.1"
flate2 = { version = "1.1.2", features = ["zlib-rs"], default-features = false }
sha1 = "0.10.6"
serde_jsonc = "1.0.108"
rayon = "1.11.0"

[lints.clippy]
pedantic = "allow"
