[package]
name = "git-file-storage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-gfs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
bytesize = { version = "1.3.0", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive"] }
clap-verbosity-flag = "3.0.0"
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
fastcdc = "3.2.1"
sha1 = "0.10.6"
serde_jsonc = "1.0.108"

[lints.clippy]
pedantic = "allow"
